--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "V22-Front-End",
+  "description": "Login methods project",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/martlaus/V22-Front-End",
   "license": "MIT",
   "private": true,
   "dependencies": {
