parandasin node serveri confi

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "shelljs": "^0.2.6"
   },
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "bower install --allow-root",
 
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 7080 ./app -c-1",
+    "start": "http-server -p 7080 ./app -c-1",
 
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
